# cowbox

./: Cargo.toml  README.md  build.rs  ordinal.def  shell.nix
.github/workflows/: release.yaml  test.yaml
cowbox/: Cargo.toml
cowbox/src/: args.rs  as_str.rs  cache_dir.rs  injection.rs  lib.rs  main.rs  prepare_program.rs  spawn_process.rs  subcommands.rs  vfs.rs
cowbox/src/injection/: constants.rs  injection_binaries.rs  injection_binary.rs
cowbox/src/spawn_process/: status_bool.rs  unix.rs  windows.rs
cowbox/src/subcommands/: exec.rs  run.rs
cowbox/src/vfs/: vfs.rs
cowbox/tests/: cli.rs  lib.rs
cowbox_injection/: Cargo.toml  build.rs
cowbox_injection/src/: lib.rs  linux.rs  windows.rs
cowbox_injection/tests/: linux.rs  macos.rs  windows.rs
cowbox_injection/tests/common/: test_rm.rs
cowbox_testing/: Cargo.toml
cowbox_testing/src/: lib.rs  test_rm.rs
detours_sys/: Cargo.toml  build.rs
src/: detours.rs  lib.rs  libc.rs  linux.rs  macos.rs  windows.rs
tests/: dylib_tests.rs  linux.rs  macos.rs  windows.rs
tests/common/: arch.rs  mod.rs
