[package]
name = "cowbox"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
cowbox_injection = { path = "../cowbox_injection" }
xxhash-rust = { version = "0.8.6", features = ["const_xxh3"] }

[target.'cfg(target_os = "macos")'.dependencies]
which = "4.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
detours_sys = { path = "../detours_sys" }

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.48.0"
features = [
  "Win32_Foundation",
  "Win32_System_Threading",
]

[dev-dependencies]
cowbox_testing = { path = "../cowbox_testing" }
