[package]
name = "cowbox_injection"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(unix)'.dependencies]
libc = "0.2.140"

[target.'cfg(windows)'.dependencies]
detours_sys = { path = "../detours_sys" }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
]

[dev-dependencies]
tempfile = "3.5.0"
