[package]
name = "detours_sys"
version = "0.1.0"
edition = "2021"

[dependencies.windows-sys]
version = "0.48.0"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
]

[build-dependencies]
vcpkg = "0.2.15"

[package.metadata.vcpkg.target]
i686-pc-windows-msvc = { triplet = "x86-windows-static-md", dependencies = ["detours"] }
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", dependencies = ["detours"] }
